universe-apps/environments/dev/documentdb-proxy/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentdb-proxy
spec:
  externalName: universe-rinkeby.cluster-cotqfbtbif7j.us-east-1.docdb.amazonaws.com
