universe-apps/environments/dev/documentdb-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: documentdb-proxy
spec:
  type: ExternalName
