universe-apps/environments/dev/documentdb-proxy/patch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: documentdb-proxy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev.documentdb-proxy.universe.xyz
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
